--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.wang.avi:library:1.0.5'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.2.1'
+    compile 'com.google.android.gms:play-services-maps:9.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
